# slipandslide

./: .vimrc  meson.build  tags
src/: .DetectorView.cpp.swp  .DetectorView.h.swp  .SlipGL.cpp.swp  .SlipObject.cpp.swp  .SlipObject.h.swp  .SlipPanel.h.swp  DetectorView.cpp  DetectorView.h  Line.cpp  Line.h  Overview.cpp  Overview.h  Refine.cpp  Refine.h  SlipGL.cpp  SlipGL.h  SlipObject.cpp  SlipObject.h  SlipPanel.cpp  SlipPanel.h  Speckle.cpp  Speckle.h  Splattice.cpp  Splattice.h  main.cpp  vec_utils.h
src/shaders/: fImage.h  vImage.h  vari_z.h
